--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,7 @@
     <body>
       
         <header>
-          <nav class="navbar navbar-dark bg-dark fixed-top">
+          <nav class="navbar navbar-dark bg fixed-top">
               <div class="container-fluid">
                   <div class="LogoHeader">
                       <a class="navbar-brand" href="index.html"><img src="img/icono.png" class="img-fluid"></a>
