--- a/sobreMi.html
+++ b/sobreMi.html
@@ -42,7 +42,7 @@
     <body>
       
         <header>
-            <nav class="navbar navbar-dark bg-dark fixed-top">
+            <nav class="navbar navbar-dark bg fixed-top">
                 <div class="container-fluid">
                     <div class="LogoHeader">
                         <a class="navbar-brand" href="index.html"><img src="img/icono.png" class="img-fluid"></a>
@@ -52,7 +52,7 @@
                         <li class="enlaceHeader"><a href="sobreMi.html">SOBRE MÍ</a></li>
                         <li class="enlaceHeader"><a href="contacto.html">CONTACTO</a></li>
                         <li class="enlaceHeader"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WHATSAPP</li></a>
-                        <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: gold"></i> LLAMAR</li></a>
+                        <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: black"></i> LLAMAR</li></a>
                     </div>
 
                     <!--  Header Bootstrap Barra de navegacion lateral  -->
@@ -130,16 +130,11 @@
                 </div>
                 <div class="caja-presentacion">
                     <p>Somos una pequeña empresa familiar que nos dedicamos a brindar soluciones a instalaciones eléctricas. Con la premisa de efectuar el trabajo bajo normas, contemplando las medidas vigentes de seguridad eléctrica y su respectiva garantía correspondiente al trabajo realizado.</p>
-                    <br>
                     <p>Trabajamos con un equipo de profesionales con gran conocimiento en el área y con el objetivo de aprender continuamente por lo que somos estudiantes de ingeniería eléctrica en la Universidad Nacional de Hurlingham, que para poder ofrecer mejores servicios estamos continuamente invirtiendo en herramientas, instrumental necesario, capacitaciones y cursos para enfrentar cualquier reto que la actividad nos anteponga.</p>
-                    <br>
                     <p>Los trabajos se entregan con la factura, y para mayor tranquilidad, tanto para ustedes como para nosotros, contamos con seguro que incluye cláusula de no repetición de la compañía La Meridional.</p>
-                    <br>
                     <p>Atendemos emergencias eléctricas las 24 horas los 7 días de la semana. Feriados, fiestas, sábados , domingos, nos dedicamos a brindar un optimo servicio.</p>
                     <p>Recibimos Mercado Pago, tarjetas de crédito, debito transferencias, QR</p>
-                    <br>
                     <p>Las matriculas habilitantes se encuentran a disposición del cliente. Se puede acceder a mis datos como profesional escaneando el código QR de la Matricula</p>
-                    <br>
                     <p>Ponemos mucho énfasis en la seguridad e higiene, aunque no es obligatorio siempre usamos barbijo. Es premisa para nosotros la salud del cliente y la nuestra</p>
                 </div>
             </div>
