--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <body>
   
     <header>
-      <nav class="navbar navbar-dark bg-dark fixed-top">
+      <nav class="navbar navbar-dark bg fixed-top">
           <div class="container-fluid">
               <div class="LogoHeader">
                   <a class="navbar-brand" href="index.html"><img src="img/icono.png" class="img-fluid"></a>
@@ -52,7 +52,7 @@
                   <li class="enlaceHeader"><a href="sobreMi.html">SOBRE MÍ</a></li>
                   <li class="enlaceHeader"><a href="contacto.html">CONTACTO</a></li>
                   <li class="enlaceHeader"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WHATSAPP</li></a>
-                  <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: gold"></i> LLAMAR</li></a>
+                  <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: black"></i> LLAMAR</li></a>
               </div>
 
               <!--  Header Bootstrap Barra de navegacion lateral  -->
@@ -126,14 +126,14 @@
     <div class="inicio" id="inicio"></div>
     
     <!--  CAROUSEL BOOTSTRAP -->
-    <div id="carouselExampleDark" class="carousel carousel-white slide">
+    <div id="carouselExampleDark" class="carousel carousel-white slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="10000">
-          <img src="img/banner 1.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item active" data-bs-interval="6000">
+          <img src="img/banner 3.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-md-block">
             <div class="servicioCarousel">Servicio a domicilio</div>
             <div class="tituloCarousel">URGENCIAS ELÉCTRICAS</div>
@@ -151,8 +151,8 @@
           </div>
         </div>
         
-        <div class="carousel-item" data-bs-interval="2000">
-          <img src="img/banner 2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="6000">
+          <img src="img/banner 4.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-md-block">
             <div class="servicioCarousel">Servicio a domicilio</div>
             <div class="tituloCarousel">ATENCION ESPECIALIZADA LAS 24 HS</div>
