--- a/contacto.html
+++ b/contacto.html
@@ -45,14 +45,14 @@
           <nav class="navbar navbar-dark bg fixed-top">
               <div class="container-fluid">
                   <div class="LogoHeader">
-                      <a class="navbar-brand" href="index.html"><img src="img/icono.png" class="img-fluid"></a>
+                      <a class="navbar-brand" href="index.html"><img src="img/logoRedondo.png" class="img-fluid"></a>
                   </div>
                   <div class="SeccionesHeader">
                       <li class="enlaceHeader"><a href="index.html">INICIO</a></li>
                       <li class="enlaceHeader"><a href="sobreMi.html">SOBRE MÍ</a></li>
                       <li class="enlaceHeader"><a href="contacto.html">CONTACTO</a></li>
                       <li class="enlaceHeader"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WHATSAPP</li></a>
-                      <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: gold"></i> LLAMAR</li></a>
+                      <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone"></i> LLAMAR</li></a>
                   </div>
     
                   <!--  Header Bootstrap Barra de navegacion lateral  -->
