--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   <li class="enlaceHeader"><a href="index.html">INICIO</a></li>
                   <li class="enlaceHeader"><a href="sobreMi.html">SOBRE MÍ</a></li>
                   <li class="enlaceHeader"><a href="contacto.html">CONTACTO</a></li>
-                  <li class="enlaceHeader"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WHATSAPP</li></a>
+                  <li class="enlaceHeader"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp" style="color:  rgba(37,211,102,1) !important"></i> WHATSAPP</li></a>
                   <li class="enlaceHeader"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone"></i> LLAMAR</li></a>
               </div>
 
@@ -76,7 +76,7 @@
                               <a class="nav-link" style="font-weight: bold" href="contacto.html">CONTACTO</a>
                           </li>
                           <li class="nav-item">
-                              <a class="nav-link" href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</li></a>
+                              <a class="nav-link" href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp" style="color:  rgba(37,211,102,1) !important"></i> WhatsApp</li></a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone"></i> Llamar</li></a>
@@ -145,7 +145,7 @@
             </div>
             <div class="botonesCarousel">
               <button class="botonWa"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</button></a>
-              <button class="botonLlamar"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone"></i> Llamar</button></a>
+              <button class="botonLlamar"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: white"></i> Llamar</button></a>
               <button class="botonMail"><a href="mailto:iblancolopez73@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i> Mail</a>
             </div>
           </div>
@@ -164,7 +164,7 @@
             </div>
             <div class="botonesCarousel">
               <button class="botonWa"><a href="https://wa.me/5491154694081?text=" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</button></a>
-              <button class="botonLlamar"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone"></i> Llamar</button></a>
+              <button class="botonLlamar"><a href="tel:+5491154694081" target="_blank"><i class="fa-solid fa-phone" style="color: white"></i> Llamar</button></a>
               <button class="botonMail"><a href="mailto:ignacioalfredo.blancolopez@copime.org.ar" target="_blank"><i class="fa-solid fa-envelope"></i> Mail</a>
             </div>
           </div>
