--- a/contacto.html
+++ b/contacto.html
@@ -2,6 +2,30 @@
 <html>
 
     <head>
+
+    <meta name="language" content="spanish"> <!-- Sitio web en español -->
+    <meta name="author" content="Elias Zurita"> <!-- Diseñado por... -->
+    <meta name="audience" content="all"> <!-- Google sabra que no tiene restricciones de audiencia -->
+    <meta name="distribution" content="global"> <!-- El sitio web no tiene restricciones geograficas para ser vista -->
+    <meta name="description" content="ELectricista Matriculado - Blanco Ignacio"> <!-- Descripcion que aparece en el buscador de google. NO debe superar los 150 caracteres -->
+    <meta name="keywords" content="blanco, ignacio, electricista, matriculado, servicios, electricidad, reparaciones, instalaciones, tierra"> <!-- Palabras claves que usan motores de busquedas menos google. No deben ser mas de 3 -->
+    <meta name="googlebot-image" content="all"> <!-- Indexa todas los imagenes del sitio a los motores de busqueda de google. Con la etiqueta alt en las imagenes funciona mejor -->
+    <meta name="robots" content="index, all, follow"> <!-- Indexa todos los contenidos a los motores de busqueda de google -->
+    <meta name="googlebot" content="all, index, follow"> <!-- Indexa todos los rastreadores de google -->
+    <meta name="yahoobot" content="all, index, follow"> <!-- Indexa todos los rastreadores de yahoo -->
+    <meta name="mozilla2.0" content="index, follow"> <!-- Indexa todos los rastreadores de mozilla -->
+    <meta name="msnbot" content="all, index, follow"> <!-- Indexa todos los rastreadores de Microsoft -->
+    <meta name="category" content="programacion"> <!-- Categoria a la que pertenece la pagina -->
+    <meta itemprop="telephone" content="+1154694081"> <!-- Al buscar el telefono en google aparecera para que desde un smartphone llame -->
+    <meta property="og:title" content="ELectricista Matriculado - Blanco Ignacio"> <!-- Como aparecera cuando se comparta el sitio web en facebook -->
+    <meta property="og:description" content="Atencion de Urgencias las 24Hs"> <!-- La descripcion que aparecera cuando se comparta el sitio en facebook -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/Elias-Zurita/ElectricistaBlancoWeb/master/img/logoRedondo.png"> <!-- La imagen que va a aparecer en facebook al compartir el sitio web -->
+    <meta property="og:url" content="https://blancoelectricista.com"> <!-- URL que se usara como enlace cuando se comparta el sitio web -->
+    <meta name="twitter:title" content="ELectricista Matriculado - Blanco Ignacio"> <!-- Titulo cuando se comparta el sitio web en Twitter -->
+    <meta name="twitter:description" content="Atencion de Urgencias las 24Hs"> <!-- La descripcion que aparecera cuando se comparta el sitio en Twitter -->
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Elias-Zurita/ElectricistaBlancoWeb/master/img/logoRedondo.png"> <!-- La imagen que va a aparecer en Twitter al compartir el sitio web -->
+    <meta name="twitter:card" content="summary_large_image"> <!-- La imagen que va a aparecer en Twitter va a ser grande -->
+
         <!-- Caracteres -->
         <meta charset="UTF-8">
         
